# LANDR.Plugin.SDK

./: README.md
example/: CMakeLists.txt  README.md
example/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/: CMakeLists.txt  README.md
examples/commandline/: CMakeLists.txt  main.cpp
examples/plugin/: CMakeLists.txt
examples/plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
landr/: LANDR.h  Licenser.h  Status.h
